[add] pre version

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ MONGODB_DATABASE="medical"
 MONGODB_COLLECTION="user"
 MONGODB_USERNAME="admin"
 MONGODB_PASSWORD="123456"
+
+ETH_ACCOUNT="asddhfgghjkhjkjhkuhjkjkjkjkljk"
+USDT_ACCOUNT="TQn9Y2khEsLJW1ChVWFMSMeRDow5KcbLSE"
+USDT_PRIVATE_KEY="your-usdt-private-key-here"
