--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ python-dotenv==1.0.0
 pymongo==4.6.0
 pydantic==2.5.0
 pydantic-core==2.14.5
+qrcode[pil]==7.4.2
+Pillow==10.1.0
+apscheduler==3.10.4
